    * 0270 FIX: Multisite host tag filter: Now uses exact match...
    * 0273 FIX: Fixed exceptions when modifying / cloning views...
    * 0274 FIX: Fixed exception when view title or description was missing
    * 0278 FIX: Fixed bookmark icon images for non-english user languages...
    * 0670 FIX: LDAP: Fixed sync when non lower case attributes are configured...

    WATO:
    * 0308 Multisite can now set rotation view permissions for NagVis...
    * 0329 Removed Distributed WATO peer mode...
            NOTE: Please refer to the migration notes!
    * 0244 New features for WATO page Backup & Restore...
    * 0382 Active HTTP check now supports multiline regexp matching...
    * 0112 Explicit mapping of clustered services can now be done with WATO...
    * 0437 Convert WATO rule for debug_log into simple Checkbox...
    * 0428 Changed user profiles (e.g. pw changes) are now replicated in distributed setups...
    * 0114 User Custom Attributes can now be exported to the core...
    * 0448 New button in WATO service list for displaying check parameters...
    * 0454 Add output of traceroute to host diagnostic page
    * 0677 Make title of tags and tag groups localizable...
    * 0685 Distributed WATO now disabled WATO on slave sites per default...
    * 0687 New summary pages with all settings of a host or service...
    * 0275 WATO "Notify Users" feature: Improved confirmation info...
    * 0134 New option to use expect string in response heads for check_http in wato...
    * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
    * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
    * 0019 FIX: Fixed wording in WATO rule for MSSQL check
    * 0242 FIX: Parameters for clustered services can now be configured on the cluster host...
    * 0309 FIX: Trying to prevent read/write conflicts with a large user base...
    * 0311 FIX: Fixed "Inventory failed" message when trying an inventory on clusters via WATO...