@@ -219,6 +219,7 @@
     * 0274 FIX: Fixed exception when view title or description was missing
     * 0278 FIX: Fixed bookmark icon images for non-english user languages...
     * 0670 FIX: LDAP: Fixed sync when non lower case attributes are configured...
+    * 0671 FIX: LDAP: Disable logging of password changes received from LDAP
 
     WATO:
     * 0308 Multisite can now set rotation view permissions for NagVis...
